промежуточное сохранение, частично добавил бд